# jupjs9

./: README.md  pyproject.toml
jupjs9/: __init__.py  app.py  handlers.py
jupjs9/templates/: index.html
jupyter_server_config.d/: jupjs9.json
