[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupjs9"
description = 'Jupyter interface for js9'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"

dependencies = [
    "jinja2",
    "jupyter_server",
    "jupyter-server-proxy==3.2.1",
    "python-socketio[client]",
    "socketIO-client",
    "sidecar",
    "ipywidgets",
    "pyjs9"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/zoghbi-a/jupjs9"

[tool.hatch.version]
path = "jupjs9/__init__.py"

[project.entry-points.jupyter_serverproxy_servers]
js9 = "jupjs9:js9_main_server"
js9Helper = "jupjs9:js9_helper_server"


[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.8.1"]

[tool.hatch.build.targets.wheel.shared-data]
"jupjs9.json" = "etc/jupyter/jupyter_server_config.d/jupjs9.json"

[tool.hatch.build.targets.sdist]
exclude = [".git", ".ipynb_checkpoints"]
